# asteroid-wasm

./: .env.dev  .gitignore  README.md  asset-manifest.json  dev.prod.sh  dev.sh  docker-compose.prod.yml  docker-compose.yml  drop_db  index.html  package.json  precache-manifest.2d638fdf151bc7f86c258771424fbc82.js  precache-manifest.5a6dc954f9fbcd21b693f294c8cacf4c.js  precache-manifest.835ae382cd7868e54f428745036dbf6b.js  precache-manifest.a56070a7cb14d361f6146e2b0afa0480.js  service-worker.js  wasm-replace.sh
.github/workflows/: build-deploy.yml
backend/: .eslintrc.js  Dockerfile  README.md  package.json  tsconfig.json
backend/src/: app.ts  database.ts  models.ts
frontend/: .dockerignore  .eslintrc.json  Dockerfile  config-overrides.js  dev.prod.sh  dev.sh  package.json  tsconfig.json  workspace.code-workspace
frontend/public/: index.html
frontend/src/: App.tsx  WasmContext.ts  index.tsx  types.ts
nginx/: nginx.conf
rust/: Cargo.toml  Dockerfile
rust/src/: client.rs  input.rs  lib.rs
rust/src/programs/: asteroid.rs  mod.rs
rust/src/programs/cube/: plane.rs
src/: types.ts
src/rust/: Cargo.toml
src/utils/: Requester.ts  Responses.ts  _base.scss  stars.module.scss
static/css/: main.2c722420.chunk.css  main.2c722420.chunk.css.map  main.69f5691d.chunk.css  main.69f5691d.chunk.css.map  main.770f0a54.chunk.css  main.770f0a54.chunk.css.map  main.c161863b.chunk.css  main.c161863b.chunk.css.map
static/js/: 2.595f4118.chunk.js  2.595f4118.chunk.js.map  2.87bd8243.chunk.js  2.87bd8243.chunk.js.map  3.4e5d5d73.chunk.js  3.4e5d5d73.chunk.js.map  (+16 more)
(+80 files in other folders)
