[package]
authors = ["Roberts Ivanovs <robertsivanovs1999@gmail.com>"]
edition = "2018"
name = "spa-wasm-rust"
version = "0.1.0"
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
js-sys = "0.3.45"
lazy_static = "1.4.0"
nalgebra-glm = "0.9"
wasm-bindgen = {version = "0.2.68"}

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = {version = "0.1.6", optional = true}

[dependencies.web-sys]
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'Window',
  'console',
  'EventTarget',
  'MouseEvent',
]
version = "0.3.45"

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
